--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,19 @@ body {
    font-weight: 700;
    background: rgba(204, 204, 204, 0);
    background: none;
+   
 }
 
 #trekPic {
-   height: 400px;
-   width: 400px;
+   height: 500px;
+   width: px;
    float: right;
+   max-width: 100%;
+   max-height: 100%;
+}
+..picContainer {
+   max-width: 80%;
+   max-height: 80%;
+   
+
 }
